fixes long titles on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,8 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 5rem;
+    padding: 1.5rem;
+    /* padding: 5rem; Responsive */
 }
 
 .shopping-cart__product {
@@ -113,9 +114,11 @@ main {
 }
 
 .shopping-cart__img-container {
+    flex: 1;
     /* max-width: 100%; */
     height: 100%;
     text-align: center;
+    align-content: center;
 }
 
 .shopping-cart__img {
@@ -123,10 +126,20 @@ main {
     max-height: 100%;
 }
 
-.shopping-cart__img-container,
+/* .shopping-cart__img-container, */
 .shopping-cart__info {
     flex: 1;
-    padding: 0 1rem;
+    /* padding: 0 1rem; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* padding: 1rem; */
+}
+
+.shopping-cart__title {
+    /* font-size: inherit; */
+    font-size: smaller;
+    word-wrap: anywhere;
 }
 
 /* MEDIA QUERIES */
